--- a/_css/app_typography-base.scss
+++ b/_css/app_typography-base.scss
@@ -53,3 +53,10 @@ h6 {
 	@include LeHavre(1.3rem);
 	letter-spacing: -0.05em;
 }
+
+/*
+remove double bold issue in CMS
+*/
+
+h1 strong, h2 strong, h3 strong, h4 strong, h5 strong, h6 strong {font-weight: 500;}
+
